test/integration/page-config/pages/invalid/invalid-value.js
const amp = 'hybrid'

// export const config = { amp }

export default () => <p>hello ${amp}</p>
